fix location name overflow

--- a/client/sources/css/map/locations.styl
+++ b/client/sources/css/map/locations.styl
@@ -3,6 +3,7 @@
   z-index 2
   display flex
   align-items center
+  max-width 300px
   cursor pointer
 
 .location-text
@@ -10,6 +11,8 @@
   color #eeeeee
   border-radius 5px
   padding 7px
+
+  word-break break-word
 
   -webkit-user-select text
   -moz-user-select text
